<resources>
    <string name="app_name">Medicine</string>
    <string name="app_tagline">Application tagline - edit from res/values/strings.xml</string>

    <!-- text view -->
    <string name="add_medicine_days">Medicine Days</string>
    <string name="add_medicine_reminder">Reminder</string>
    <string name="add_medicine_time">00:00</string>

    <!-- errors -->
    <string name="name_error">Medicine name shouldn\'t be empty</string>
    <string name="days_error">Please select atleast one day</string>
    <string name="time_error">Please select the time</string>

    <!-- titles -->
    <string name="title_auth">Authentication</string>

    <!-- hints -->
    <string name="email_hint">Enter valid email address</string>
    <string name="pwd_hint">Enter correct password</string>
    <string name="add_medicine_name_hint">Name of the medicine</string>

    <!-- buttons -->
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="toggle_time_picker1">Select Time</string>
    <string name="toggle_time_picker2">Change Time</string>

    <!-- toast messages -->
    <string name="medicine_saved">Medicine saved to room database</string>
    <string name="medicine_updated">Medicine updated</string>

    <!-- alert dialog -->
    <string name="delete_medicine_title">Are you sure?</string>
    <string name="delete_medicine_message">You can\'t undo this operation</string>
    <string name="delete_medicine_positive">Delete</string>
    <string name="delete_medicine_negative">Cancel</string>

    <!-- intent extra -->
    <string name="view_medicine">VIEW_MEDICINE</string>

    <!-- crud menu -->
    <string name="menu_item_delete">Delete</string>

    <!-- notification -->
    <string name="notify_channel_id">NOTIFY_MEDICINE</string>
    <string name="reminder_title">Medicine Reminder</string>
    <string name="reminder_msg">Don\'t forget to take the medicine</string>
    <string name="channel_name">REMINDER_CHANNEL</string>
    <string name="channel_desc">Channel for notifying the medicine reminder</string>

    <!-- weekdays array -->
    <string-array name="week_days">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- room database -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>