<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AddMedicineFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_medicine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:drawableStart="@drawable/ic_hospital"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/add_medicine_name_hint"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_medicine_days"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/days_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_error"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="invisible" />

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/add_medicine_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp" >

            </ca.antonious.materialdaypicker.MaterialDayPicker>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_medicine_reminder"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_error"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/show_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_medicine_time" />

            <Button
                android:id="@+id/add_medicine_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_time_picker1"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:src="@drawable/ic_done"
        android:tint="@color/white" />

</RelativeLayout>